cpp/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
02:09:53 **** Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
02:10:05 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:89:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
02:12:02 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘void KMPSearch(char*, char*)’:
../src/kmp.cpp:17:5: error: ‘cout’ was not declared in this scope
     cout<<M<<" lps "<<lps<<endl;
     ^
../src/kmp.cpp:17:5: note: suggested alternative:
In file included from /usr/include/x86_64-linux-gnu/c++/5/bits/stdc++.h:74:0,
                 from ../src/kmp.cpp:1:
/usr/include/c++/5/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
../src/kmp.cpp:17:28: error: ‘endl’ was not declared in this scope
     cout<<M<<" lps "<<lps<<endl;
                            ^
../src/kmp.cpp:17:28: note: suggested alternative:
In file included from /usr/include/c++/5/istream:39:0,
                 from /usr/include/c++/5/sstream:38,
                 from /usr/include/c++/5/complex:45,
                 from /usr/include/x86_64-linux-gnu/c++/5/bits/stdc++.h:66,
                 from ../src/kmp.cpp:1:
/usr/include/c++/5/ostream:590:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:89:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
make: *** [src/kmp.o] Error 1
src/subdir.mk:18: recipe for target 'src/kmp.o' failed
02:13:04 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘void KMPSearch(char*, char*)’:
../src/kmp.cpp:17:20: warning: format ‘%s’ expects argument of type ‘char*’, but argument 2 has type ‘int*’ [-Wformat=]
     printf("%s",lps);
                    ^
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:89:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
02:13:28 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘void KMPSearch(char*, char*)’:
../src/kmp.cpp:17:26: warning: format ‘%s’ expects argument of type ‘char*’, but argument 2 has type ‘int*’ [-Wformat=]
     printf("lps : %s",lps);
                          ^
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:89:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
02:14:19 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘void KMPSearch(char*, char*)’:
../src/kmp.cpp:17:17: error: ‘m’ was not declared in this scope
     for(lk=0;lk<m;lk++)
                 ^
../src/kmp.cpp:18:29: warning: format ‘%c’ expects argument of type ‘int’, but argument 2 has type ‘int*’ [-Wformat=]
     printf("lps : %c",lps+lk);
                             ^
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:91:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
src/subdir.mk:18: recipe for target 'src/kmp.o' failed
make: *** [src/kmp.o] Error 1
02:14:40 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘void KMPSearch(char*, char*)’:
../src/kmp.cpp:18:31: warning: format ‘%c’ expects argument of type ‘int’, but argument 2 has type ‘int*’ [-Wformat=]
       printf("lps : %c",lps+lk);
                               ^
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:91:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
02:14:58 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘void KMPSearch(char*, char*)’:
../src/kmp.cpp:18:31: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int*’ [-Wformat=]
       printf("lps : %d",lps+lk);
                               ^
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:91:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
02:15:26 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:90:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:91:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
02:15:59 **** Incremental Build of configuration Debug for project kmp ****
make all 
Building file: ../src/kmp.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kmp.d" -MT"src/kmp.d" -o "src/kmp.o" "../src/kmp.cpp"
../src/kmp.cpp: In function ‘int main()’:
../src/kmp.cpp:91:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *txt = "ABABDABACDABABCABAB";
                 ^
../src/kmp.cpp:92:17: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     char *pat = "ABABCABAB";
                 ^
Finished building: ../src/kmp.cpp
 
Building target: kmp
Invoking: Cross G++ Linker
g++  -o "kmp"  ./src/kmp.o   
Finished building target: kmp
 
